
load("@ros2//:ros_cc.bzl", "ros_cc_binary")
load("@ros2//:ros_cc.bzl", "ros_cc_test")
load("@ros2//:ros_py.bzl", "ros_py_binary", "ros_py_test")
load("@ros2//:rosidl.bzl", "rosidl_interfaces_group")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        "@drake//math",
        "//:opencv",
        "@drake//systems/framework",
        "@drake_ros_core"

    ], 
)

